# bootstrap

./: Cargo.toml  README.md
examples/: create_classpath.rs  launch_from_dot_minecraft.rs  parse_version_json.rs
examples/.minecraft/: .gitignore
examples/.minecraft/versions/1.19.4/: 1.19.4.json
src/: classpath.rs  lib.rs  manifest.rs  rules.rs
