[package]
name = "mc_bootstrap"
version = "0.1.1"
edition = "2021"
description = "A library for launching Minecraft."
license = "MIT"
repository = "https://github.com/minecraft-rs/bootstrap"
include = ["/src", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
